--- a/angular.json
+++ b/angular.json
@@ -73,7 +73,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Front-End-Angular:build:production"
+              "browserTarget": "Front-End-Angular:build:production",
+              "proxyConfig": "proxy.conf.json"
               
             },
             "development": {
